import React from 'react';

import { CommunityScreen } from '@/src/screens/community-screen';

export default function CommunityRoute(): React.ReactElement {
  return <CommunityScreen />;
}
