import { router, useLocalSearchParams } from 'expo-router';
import {
  Calendar,
  ChevronDown,
  Droplets,
  FlaskConical,
  Leaf,
  Save,
  Scissors,
...
