const addPlant = {
  headerTitle: 'Add Plant',
  stepProgress: 'Step {{step}} of {{total}}',
  nextStep: 'Next Step',
  reviewSetup: 'Review Setup',
  startGrowing: 'Start Growing',
  done: 'Done',
  step1: {
...
